# miceforest

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  MANIFEST.in  README.Rmd  README.ipynb  README.md  README_gen.ipynb  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: run_tests.yml
docs/: ImputationKernel.rst  ImputedData.rst  Makefile  MeanMatchScheme.rst  conf.py  index.rst  miceforest.rst  modules.rst  requirements.txt  requirements_rtd.txt  utils.rst
docs/_static/: themes.css
docs/id/: miceforest.ImputedData.rst
docs/ik/: miceforest.ImputationKernel.rst
docs/mms/: miceforest.MeanMatchScheme.rst
docs/source/: miceforest.rst
docs/utils/: miceforest.ampute_data.rst  miceforest.load_kernel.rst
miceForest/: ImputationSchema.py  MultipleImputedKernel.py  utils.py
miceforest/: ImputationKernel.py  ImputationSchema.py  ImputedData.py  ImputedDataSet.py  KernelDataSet.py  MeanMatchScheme.py  MultipleImputedDataSet.py  MultipleImputedKernel.py  TimeLog.py  __init__.py  builtin_mean_match_functions.py  builtin_mean_match_schemes.py  builtin_pred_funcs.py  compat.py  default_lightgbm_parameters.py  default_mean_match.py  imputation_kernel.py  impute.py  imputed_data.py  logger.py  mean_match.py  mean_match_schemes.py  mean_matching_functions.py  utils.py
tests/: test_ImputationKernel.py  test_ImputationSchema.py  test_KernelDataSet.py  test_MultipleImputedKernel.py  test_basic.py  test_custom_schemas.py  test_default_mean_match.py  test_imputed_accuracy.py  test_reproducibility.py  test_sklearn_pipeline.py  test_utils.py
