[tool.poetry]
name = "miceforest"
license = "MIT"
version = "6.0.0"
description = "Multiple Imputation by Chained Equations with LightGBM"
authors = ["Sam Wilson"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.10"

lightgbm = "^4.0.0"
pandas = {extras = ["parquet"], version = "2.2.0"}
numpy = "^1.26.0"
blosc2 = "^2.6.0"
dill = "^0.3.7"
scipy = "^1.11.1"
seaborn = "^0.13.0"
matplotlib = "^3.3.0"
scikit-learn = "^1.4.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.17.2"
pytest = "^8.0.0"
