[project]
name = "miceforest"
license = {file = "LICENSE"}
version = "6.0.2"
description = "Multiple Imputation by Chained Equations with LightGBM"
authors = [{name="Sam Von Wilson"}]
readme = "README.md"
classifiers = [
        'Natural Language :: English',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent"
]
dependencies = [
    "lightgbm>=4.1.0",
    "pandas>=2.1.0",
    "numpy",
    "scipy>=1.6.0",
    "pyarrow>=6.0.1"
]

[project.optional-dependencies]
plotting = [
    "plotnine>=0.13.6",
    "matplotlib>=3.3.0"
]
pipeline = [
    "scikit-learn!=0.22.0"
]

[project.urls]
Homepage = "https://github.com/AnotherSamWilson/miceforest"
Issues = "https://github.com/AnotherSamWilson/miceforest/issues"
changelog = "https://github.com/AnotherSamWilson/miceforest/releases"

[tool.setuptools]
packages = ['miceforest']

[tool.poetry]
name = "miceforest"
version = "0.9000"
description = "Multiple Imputation by Chained Equations with LightGBM"
authors = ["Sam Von Wilson"]
package-mode = true

[tool.poetry.dependencies]
python = "^3.10"

lightgbm = "^4.1.0"
pandas = {extras = ["parquet"], version = "2.2.0"}
numpy = "^1.26.0"
dill = "^0.3.7"
scipy = "^1.11.1"
seaborn = "^0.13.0"
matplotlib = "^3.3.0"
scikit-learn = "^1.4.0"
black = "^24.4.2"
plotnine = "^0.13.6"

[tool.poetry.group.dev.dependencies]
ipython = "^8.17.2"
pytest = "^8.0.0"
jupyterlab = "^3.5.0"
nbconvert = "^7.16.4"
pandoc = "^2.3"
isort = "^5.13.2"
mypy = "^1.11.0"
build = "^1.2.1"
pytest-cov = "^5.0.0"
twine = "^5.1.1"
sphinx = "^7.4.7"
sphinxcontrib-napoleon = "^0.7"
sphinx-rtd-theme = "^2.0.0"

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"